refactor: 이동 불가능 할 때 검증 로직 추가 및 기존 테스트 코드 수정